# peppy-G-TEC

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat
peppy_gtec/: PACKAGE.md  cli.py  core.py  logo.py
peppy_gtech/: PACKAGE.md  __init__.py  cli.py  core.py
