[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peppy-gtec"
version = "1.1.0"
description = "Keep Teams Status Green! Prevents system inactivity during working hours."
readme = "README.MD"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "NickyPSCK"}
]
keywords = ["teams", "status", "activity", "inactivity", "mouse", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

dependencies = [
    "pynput>=1.7.6",
]

[project.urls]
Homepage = "https://github.com/peppy-vibe/peppy-g-tec"
Documentation = "https://github.com/peppy-vibe/peppy-g-tec#readme"
Repository = "https://github.com/peppy-vibe/peppy-g-tec.git"
Issues = "https://github.com/peppy-vibe/peppy-g-tec/issues"

[project.scripts]
peppy-gtec = "peppy_gtec.cli:main"

[tool.setuptools]
packages = ["peppy_gtec"]

[tool.setuptools.package-data]
peppy_gtec = []

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
